Add Mapper Entity