@@ -3,6 +3,7 @@ package com.hitruong.RestAPI.service;
 import com.hitruong.RestAPI.entity.Brand;
 import com.hitruong.RestAPI.entity.Vehicle;
 import com.hitruong.RestAPI.exception.CustomException;
+import com.hitruong.RestAPI.mapper.VehicleMapper;
 import com.hitruong.RestAPI.model.VehicleRequest;
 import com.hitruong.RestAPI.model.VehicleResponse;
 import com.hitruong.RestAPI.repository.BrandRepository;
@@ -27,39 +28,19 @@ public class VehicleServiceImpl implements VehicleService{
     @Autowired
     private BrandRepository brandRepository;
 
+    @Autowired
+    private VehicleMapper vehicleMapper;
+
     @Override
     public VehicleResponse getVehicleById(long id) {
-        Vehicle vehicle
-                = vehicleRepository.findById(id)
+        Vehicle vehicle = vehicleRepository.findById(id)
                 .orElseThrow(() -> new CustomException(
                         "VEHICLE_NOT_FOUND",
-                        "Vehicle not found"
+                        "Vehicle id " + id + " not found"
                 ));
-
-        VehicleResponse vehicleResponse
-                = VehicleResponse.builder()
-                .created(vehicle.getCreated())
-                .name(vehicle.getName())
-                .price(vehicle.getPrice())
-                .owner(vehicle.getOwner())
-                .yearOfManufacture(vehicle.getYearOfManufacture())
-                .build();
-        return vehicleResponse;
+        return vehicleMapper.toResponse(vehicle);
     }
 
-    @Override
-    public List<VehicleResponse> getAllVehicles() {
-        List<Vehicle> vehicles = vehicleRepository.findAll();
-        return vehicles.stream()
-                .map(vehicle -> new VehicleResponse(
-                        vehicle.getName(),
-                        vehicle.getYearOfManufacture(),
-                        vehicle.getPrice(),
-                        vehicle.getOwner(),
-                        vehicle.getCreated()
-                ))
-                .collect(Collectors.toList());
-    }
 
     @Override
     public Long addVehicle(VehicleRequest vehicleRequest) {
@@ -75,19 +56,8 @@ public class VehicleServiceImpl implements VehicleService{
             brandRepository.save(brand);
         }
 
-        Vehicle vehicle = new Vehicle();
-        vehicle.setName(vehicleRequest.getName());
-
-        if(vehicleRequest.getYearOfManufacture()!=null){
-            vehicle.setYearOfManufacture(vehicleRequest.getYearOfManufacture());
-        }
-        if(vehicleRequest.getPrice()!=null){
-            vehicle.setPrice(vehicleRequest.getPrice());
-        }
-        vehicle.setOwner(vehicleRequest.getOwner());
-        vehicle.setCreated(Instant.now());
+        Vehicle vehicle = vehicleMapper.toEntity(vehicleRequest);
         vehicle.setBrand(brand);
-
         vehicleRepository.save(vehicle);
         return vehicle.getId();
     }
@@ -113,11 +83,7 @@ public class VehicleServiceImpl implements VehicleService{
                         "Vehicle Not Found"
                 ));
 
-        vehicle.setName(vehicleRequest.getName());
-        vehicle.setYearOfManufacture(vehicleRequest.getYearOfManufacture());
-        vehicle.setPrice(vehicleRequest.getPrice());
-        vehicle.setOwner(vehicleRequest.getOwner());
-        vehicle.setCreated(Instant.now());
+        vehicleMapper.updateEntityFromRequest(vehicleRequest, vehicle);
         vehicle.setBrand(brand);
         vehicleRepository.save(vehicle);
         return vehicle.getId();
@@ -147,51 +113,21 @@ public class VehicleServiceImpl implements VehicleService{
                                 (v.getPrice() <= 10_000_000 && "BUS".equalsIgnoreCase(v.getBrand().getType()))
                 ).toList();
 
-        List<VehicleResponse> responses
-                = filtered.stream()
-                .map(f -> VehicleResponse.builder()
-                        .yearOfManufacture(f.getYearOfManufacture())
-                        .name(f.getName())
-                        .created(f.getCreated())
-                        .price(f.getPrice())
-                        .owner(f.getOwner())
-                        .build()).toList();
-        return responses;
+        return filtered.stream()
+                .map(vehicleMapper::toResponse)
+                .toList();
     }
 
     @Override
-    public List<VehicleResponse> filterVehicles(String brandName, Integer year, Long min, Long max, String ownerName) {
+    public List<VehicleResponse> filterVehicles(String brandName, Integer year, Long minPrice, Long maxPrice, String ownerName) {
         return vehicleRepository.findAll().stream()
                 .filter(vehicle -> brandName == null || vehicle.getBrand().getName().equalsIgnoreCase(brandName))
                 .filter(vehicle -> year == null || vehicle.getYearOfManufacture() == year)
-                .filter(vehicle -> min == null || vehicle.getPrice() >= min)
-                .filter(vehicle -> max == null || vehicle.getPrice() <= max)
+                .filter(vehicle -> minPrice == null || vehicle.getPrice() >= minPrice)
+                .filter(vehicle -> maxPrice == null || vehicle.getPrice() <= maxPrice)
                 .filter(vehicle -> ownerName == null || vehicle.getOwner().equals(ownerName))
-                .map(
-                        v -> VehicleResponse.builder()
-                                .owner(v.getOwner())
-                                .price(v.getPrice())
-                                .created(v.getCreated())
-                                .name(v.getName())
-                                .yearOfManufacture(v.getYearOfManufacture())
-                                .build()
-                ).collect(Collectors.toList());
-    }
-
-    private List<VehicleResponse> getVehicleResponses(List<Vehicle> vehicles) {
-        if (vehicles.isEmpty()) {
-            return new ArrayList<>();
-        }
-        List<VehicleResponse> vehicleResponses
-                = vehicles.stream()
-                .map(vehicle -> VehicleResponse.builder()
-                        .name(vehicle.getName())
-                        .price(vehicle.getPrice())
-                        .owner(vehicle.getOwner())
-                        .created(vehicle.getCreated())
-                        .yearOfManufacture(vehicle.getYearOfManufacture())
-                        .build()).toList();
-        return vehicleResponses;
+                .map(vehicleMapper::toResponse)
+                .collect(Collectors.toList());
     }
 
 }
